--- a/text/header.tex
+++ b/text/header.tex
@@ -32,7 +32,7 @@ The extrinsic hash is a Merkle commitment to the block's extrinsic data, taking 
 A block may only be regarded as valid once the time-slot index $\H_\¬timeslot$ is in the past. It is always strictly greater than that of its parent. Formally:
 \begin{equation}
   \H_\¬timeslot \in \timeslot \,,\quad
-  \parentfn(\H)_t < \H_\¬timeslot\ \wedge\ \H_\¬timeslot\cdot\mathsf{P} \leq \wallclock
+  \parentfn(\H)_\¬timeslot < \H_\¬timeslot\ \wedge\ \H_\¬timeslot\cdot\mathsf{P} \leq \wallclock
 \end{equation}
 
 Blocks considered invalid by this rule may become valid as $\wallclock$ advances.
