--- a/text/definitions.tex
+++ b/text/definitions.tex
@@ -31,14 +31,14 @@
   \begin{description}
     \item[$\dict{K}{V}$] The set of dictionaries making a partial bijection of domain $k$ to range $v$. See section \ref{sec:dictionaries}.
   \end{description}
-  \item[$\sig{k}{m}$] The set of valid Ed25519 signatures of the key $k$ and message $m$. A subset of $\blob_{64}$. See section \ref{sec:cryptography}.
-  \item[$\bandersig{k}{c}{m}$] The set of Bandersnatch signatures of the public key $k$, context $c$ and message $m$. A subset of $\blob_{64}$. See section \ref{sec:cryptography}. \emph{NOTE: Not used as finite fields.}
+  \item[$\sig{k}{m}$] The set of valid Ed25519 signatures of the key $k$ and message $m$. A subset of $\bloboflen{64}$. See section \ref{sec:cryptography}.
+  \item[$\bandersig{k}{c}{m}$] The set of Bandersnatch signatures of the public key $k$, context $c$ and message $m$. A subset of $\bloboflen{64}$. See section \ref{sec:cryptography}. \emph{NOTE: Not used as finite fields.}
   \item[$\bandersnatch{r}{c}{m}$] The set of Bandersnatch Ring\textsc{vrf} proofs of the root $r$, context $c$ and message $m$. See section \ref{sec:cryptography}.
   \item[$\segment$] The set of data segments, equivalent to octet sequences of length $\mathsf{W}_G$. See equation \ref{eq:segment}.
-  \item[$\hash$] The set of 32-octet cryptographic values. A subset of $\blob_{32}$. $\hash$ without a subscript generally implies a hash function result. See section \ref{sec:cryptography}. \emph{NOTE: Not used as quaternions.}
+  \item[$\hash$] The set of 32-octet cryptographic values. A subset of $\bloboflen{32}$. $\hash$ without a subscript generally implies a hash function result. See section \ref{sec:cryptography}. \emph{NOTE: Not used as quaternions.}
   \begin{description}
-    \item[$\bskey$] The set of Bandersnatch public keys. A subset of $\blob_{32}$. See section \ref{sec:cryptography} and appendix \ref{sec:bandersnatch}.
-    \item[$\edkey$] The set of Ed25519 public keys. A subset of $\blob_{32}$. See section \ref{sec:signing}.
+    \item[$\bskey$] The set of Bandersnatch public keys. A subset of $\bloboflen{32}$. See section \ref{sec:cryptography} and appendix \ref{sec:bandersnatch}.
+    \item[$\edkey$] The set of Ed25519 public keys. A subset of $\bloboflen{32}$. See section \ref{sec:signing}.
   \end{description}
   \item[$\workitem$] The set of work items. See equation \ref{eq:workitem}.
   \item[$\workerror$] The set of work execution errors.
@@ -56,8 +56,8 @@
   \item[$\workcontext$] The set of refinement contexts.
   \item[$\blob$] The set of octet strings/``blobs''. Subscript denotes length. See section \ref{sec:sequences}.
   \begin{description}
-    \item[$\blskey$] The set of \textsc{bls} public keys. A subset of $\blob_{144}$. See section \ref{sec:signing}.
-    \item[$\ringroot$] The set of Bandersnatch ring roots. A subset of $\blob_{144}$. See section \ref{sec:cryptography} and appendix \ref{sec:bandersnatch}.
+    \item[$\blskey$] The set of \textsc{bls} public keys. A subset of $\bloboflen{144}$. See section \ref{sec:signing}.
+    \item[$\ringroot$] The set of Bandersnatch ring roots. A subset of $\bloboflen{144}$. See section \ref{sec:cryptography} and appendix \ref{sec:bandersnatch}.
   \end{description}
 \end{description}
 
@@ -74,7 +74,7 @@
 %  \item[$\gascounter$] Unused. %	Θ
 %  \item[$\Pi$] Unused. %	Π
   \item[$\histlookup$] The historical lookup function. See equation \ref{eq:historicallookup}. % Λ
-  \item[$\computedigest$] The work-digest computation function. See equation \ref{eq:workdigestfunction}. %	Ξ
+  \item[$\computereport$] The work-report computation function. See equation \ref{eq:workdigestfunction}. %	Ξ
   \item[$\transitionstate$] The general state transition function. See equations \ref{eq:statetransition}, \ref{eq:transitionfunctioncomposition}. %	ϒ
 %  \item[$\Sigma$] Unused. %	Σ
   \item[$\Phi$] The key-nullifier function. See equation \ref{eq:blacklistfilter}. %	Φ
@@ -124,9 +124,9 @@
 
 \begin{description}
   \item[$\mmrappend(\dots)$] The Merkle mountain range append function. See equation \ref{eq:mmrappend}.
-  \item[$\octetstobits_n(\dots)$] The octets-to-bits function for $n$ octets. Superscripted ${}^{-1}$ to denote the inverse. See equation \ref{eq:bitsfunc}.
+  \item[$\octetstobits\sub{n}(\dots)$] The octets-to-bits function for $n$ octets. Superscripted ${}^{-1}$ to denote the inverse. See equation \ref{eq:bitsfunc}.
   \item[$\erasurecode(\dots)$] The group of erasure-coding functions.
-  \item[$\erasurecode_n(\dots)$] The erasure-coding functions for $n$ chunks. See equation \ref{eq:erasurecoding}.
+  \item[$\erasurecode\sub{n}(\dots)$] The erasure-coding functions for $n$ chunks. See equation \ref{eq:erasurecoding}.
 %  \item[$\mathcal{D}$] Unused.
   \item[$\se(\dots)$] The octet-sequence encode function. Superscripted ${}^{-1}$ to denote the inverse. See appendix \ref{sec:serialization}.
   \item[$\fyshuffle(\dots)$] The Fisher-Yates shuffle function. See equation \ref{eq:suffle}.
@@ -134,24 +134,24 @@
   \item[$\keccak(\dots)$] The Keccak 256-bit hash function. See section \ref{sec:cryptography}.
   %  \item[$\mathcal{G}$] Unused.
   %  \item[$\mathcal{I}$] Unused.
-  \item[$\merklejustsubpath_x$] The justification path to a specific $2^x$ size page of a constant-depth Merkle tree. See equation \ref{eq:constantdepthsubtreemerklejust}.
+  \item[$\merklejustsubpath\sub{x}$] The justification path to a specific $2^x$ size page of a constant-depth Merkle tree. See equation \ref{eq:constantdepthsubtreemerklejust}.
   \item[$\keys(\dots)$] The domain, or set of keys, of a dictionary. See section \ref{sec:dictionaries}.
-  \item[$\merklesubtreepage_x$] The $2^x$ size page function for a constant-depth Merkle tree. See equation \ref{eq:constantdepthsubtreemerkleleafpage}.
+  \item[$\merklesubtreepage\sub{x}$] The $2^x$ size page function for a constant-depth Merkle tree. See equation \ref{eq:constantdepthsubtreemerkleleafpage}.
   \item[$\merklizecd(\dots)$] The constant-depth binary Merklization function. See appendix \ref{sec:merklization}.
   \item[$\merklizewb(\dots)$] The well-balanced binary Merklization function. See appendix \ref{sec:merklization}.
   \item[$\merklizestate(\dots)$] The state Merklization function. See appendix \ref{sec:statemerklization}.
   %  \item[$\mathcal{N}$] Unused.
   \item[$\getringroot(\dots)$] The Bandersnatch ring root function. See section \ref{sec:cryptography} and appendix \ref{sec:bandersnatch}.
-  \item[$\zeropad_n(\dots)$] The octet-array zero-padding function. See equation \ref{eq:zeropadding}.
+  \item[$\zeropad\sub{n}(\dots)$] The octet-array zero-padding function. See equation \ref{eq:zeropadding}.
   \item[$\seqfromhash(\dots)$] The numeric-sequence-from-hash function. See equation \ref{eq:sequencefromhash}.
   \item[$\ecrecover$] The group of erasure-coding piece-recovery functions.
-  \item[$\signdata_k(\dots)$] The general signature function. See section \ref{sec:cryptography}.
+  \item[$\signdata\sub{k}(\dots)$] The general signature function. See section \ref{sec:cryptography}.
   \item[$\wallclock$] The current time expressed in seconds after the start of the \Jam Common Era. See section \ref{sec:commonera}.
   \item[$\subifnone(\dots)$] The substitute-if-nothing function. See equation \ref{eq:substituteifnothing}.
   \item[$\values(\dots)$] The range, or set of values, of a dictionary or sequence. See section \ref{sec:dictionaries}.
-  \item[$\sext_n(\dots)$] The signed-extension function for a value in $\Nbits{8n}$. See equation \ref{eq:signedextension}.
+  \item[$\sext\sub{n}(\dots)$] The signed-extension function for a value in $\Nbits{8n}$. See equation \ref{eq:signedextension}.
   \item[$\banderout(\dots)$] The alias/output/entropy function of a Bandersnatch \textsc{vrf} signature/proof. See section \ref{sec:cryptography} and appendix \ref{sec:bandersnatch}.
-  \item[$\tosigned_n(\dots)$] The into-signed function for a value in $\Nbits{8n}$. Superscripted with ${}^{-1}$ to denote the inverse. See equation \ref{eq:signedfunc}.
+  \item[$\tosigned\sub{n}(\dots)$] The into-signed function for a value in $\Nbits{8n}$. Superscripted with ${}^{-1}$ to denote the inverse. See equation \ref{eq:signedfunc}.
 \end{description}
 
 \subsection{Values}
@@ -163,7 +163,7 @@ These terms are all contextualized to a single block. They may be superscripted 
   \item[$\ancestors$] The ancestor set of the block. See equation \ref{eq:ancestors}.
   \item[$\block$] The block. See equation \ref{eq:block}.
   \item[$\extrinsic$] The block extrinsic. See equation \ref{eq:extrinsic}.
-  \item[$\mathbf{F}_v$] The \textsc{Beefy} signed commitment of validator $v$. See equation \ref{eq:beefysignedcommitment}.
+  \item[$\mathbf{F}\sub{v}$] The \textsc{Beefy} signed commitment of validator $v$. See equation \ref{eq:beefysignedcommitment}.
   \item[$\reporters$] The set of Ed25519 guarantor keys who made a work-report. See equation \ref{eq:guarantorsig}.
   \item[$\header$] The block header. See equation \ref{eq:header}.
   \item[$\accumulationstatistics$] The sequence of work-reports which were accumulated this in this block. See equation \ref{eq:accumulatedreports}.
