--- a/text/merklization.tex
+++ b/text/merklization.tex
@@ -9,7 +9,7 @@ The serialization of state primarily involves placing all the various components
 We define the state-key constructor functions $C$ as:
 \begin{equation}
   C\colon\abracegroup{
-    \Nbits{8} \cup (\Nbits{8}, \serviceid) \cup \tup{\serviceid, \blob} &\to \blob_{31} \\
+    \Nbits{8} \cup (\Nbits{8}, \serviceid) \cup \tup{\serviceid, \blob} &\to \bloboflen{31} \\
     i \in \Nbits{8} &\mapsto [i, 0, 0, \dots] \\
     (i, s \in \serviceid) &\mapsto [i, n_0, 0, n_1, 0, n_2, 0, n_3, 0, 0, \dots]\ \where n = \se_4(s) \\
     (s, h) &\mapsto [n_0, a_0, n_1, a_1, n_2, a_2, n_3, a_3, a_4, a_5, \dots, a_{26}]\ \where n = \se_4(s), a = \blake(h)_{0\dots 27}
@@ -27,7 +27,7 @@ The state serialization is then defined as the dictionary built from the amalgam
       1\ &\when \sealtickets \in \seq{\bskey}_\epochlen\\
     }, \sealtickets,
     \var{\ticketaccumulator}}\right) \;, \\
-    &&C(5) &\mapsto \se(\var{\orderby{x}{x \in \goodset}}, \var{\orderby{x}{x \in \badset}}, \var{\orderby{x}{x \in \wonkyset}}, \var{\orderby{x}{x \in \offenders}}) \;, \\
+    &&C(5) &\mapsto \se(\var{\sqorderby{x}{x \in \goodset}}, \var{\sqorderby{x}{x \in \badset}}, \var{\sqorderby{x}{x \in \wonkyset}}, \var{\sqorderby{x}{x \in \offenders}}) \;, \\
     &&C(6) &\mapsto \se(\entropy) \;, \\
     &&C(7) &\mapsto \se(\stagingset) \;, \\
     &&C(8) &\mapsto \se(\activeset) \;, \\
@@ -72,11 +72,11 @@ In the case of a regular leaf, the remaining 6 bits of the first byte are zeroed
 Formally, we define the encoding functions $B$ and $L$:
 \begin{align}
   B&\colon\abracegroup{
-    (\hash, \hash) &\to \bitstring_{512}\\
+    (\hash, \hash) &\to \bitstringoflen{512}\\
     (l, r) &\mapsto [0] \concat \text{bits}(l)_{1\dots} \concat \text{bits}(r)
   }\\
   L&\colon\abracegroup{
-    (\blob_{31}, \blob) &\to \bitstring_{512}\\
+    (\bloboflen{31}, \blob) &\to \bitstringoflen{512}\\
     (k, v) &\mapsto \begin{cases}
       [1, 0] \concat \text{bits}(\se_1(\len{v}))_{2\dots} \concat \text{bits}(k) \concat \text{bits}(v) \concat [0, 0, \dots] &\when \len{v} \le 32\\
       [1, 1, 0, 0, 0, 0, 0, 0] \concat \text{bits}(k) \concat \text{bits}(\blake(v)) &\otherwise
@@ -87,7 +87,7 @@ Formally, we define the encoding functions $B$ and $L$:
 We may then define the basic Merklization function $\merklizestate$ as:
 \begin{align}
   \merklizestate(\thestate) &\equiv M(\set{ (\text{bits}(k) \mapsto \tup{k, v}) \mid (k \mapsto v) \in T(\thestate) })\\
-  M(d: \dict{\bitstring}{(\blob_{31}, \blob)}) &\equiv \begin{cases}
+  M(d: \dict{\bitstring}{(\bloboflen{31}, \blob)}) &\equiv \begin{cases}
     \zerohash &\when \len{d} = 0\\
     \blake(\text{bits}^{-1}(L(k, v))) &\when \Fvalues{d} = \set{ \tup{k, v} }\\
     \blake(\text{bits}^{-1}(B(M(l), M(r)))) &\otherwise\\
@@ -107,7 +107,7 @@ The Merkle tree is a cryptographic data structure yielding a hash commitment to 
 The underlying function for our Merkle trees is the \emph{node} function $N$, which accepts some sequence of blobs of some length $n$ and provides either such a blob back or a hash:
 \begin{equation}
   N\colon\abracegroup{
-    (\seq{\blob_n}, \blob \to \hash) &\to \blob_n \cup \hash \\
+    (\seq{\bloboflen{n}}, \blob \to \hash) &\to \bloboflen{n} \cup \hash \\
     (\mathbf{v}, H) &\mapsto \begin{cases}
       \zerohash &\when \len{\mathbf{v}} = 0 \\
       \mathbf{v}_0 &\when \len{\mathbf{v}} = 1 \\
@@ -116,12 +116,12 @@ The underlying function for our Merkle trees is the \emph{node} function $N$, wh
   }\label{eq:merklenode}
 \end{equation}
 
-The astute reader will realize that if our $\blob_n$ happens to be equivalent $\hash$ then this function will always evaluate into $\hash$. That said, for it to be secure care must be taken to ensure there is no possibility of preimage collision. For this purpose we include the hash prefix $\token{\$node}$ to minimize the chance of this; simply ensure any items are hashed with a different prefix and the system can be considered secure.
+The astute reader will realize that if our $\bloboflen{n}$ happens to be equivalent $\hash$ then this function will always evaluate into $\hash$. That said, for it to be secure care must be taken to ensure there is no possibility of preimage collision. For this purpose we include the hash prefix $\token{\$node}$ to minimize the chance of this; simply ensure any items are hashed with a different prefix and the system can be considered secure.
 
 We also define the \emph{trace} function $T$, which returns each opposite node from top to bottom as the tree is navigated to arrive at some leaf corresponding to the item of a given index into the sequence. It is useful in creating justifications of data inclusion.
 \begin{equation}
   T\colon\abracegroup{
-    (\seq{\blob_n}, \N_{\len{\mathbf{v}}}, \blob \to \hash)\ &\to \seq{\blob_n \cup \hash}\\
+    (\seq{\bloboflen{n}}, \Nmax{\len{\mathbf{v}}}, \blob \to \hash)\ &\to \seq{\bloboflen{n} \cup \hash}\\
     (\mathbf{v}, i, H) &\mapsto \begin{cases}
       [N(P^\bot(\mathbf{v}, i), H)] \concat T(P^\top(\mathbf{v}, i), i - P_I(\mathbf{v}, i), H) &\when \len{\mathbf{v}} > 1\\
       [] &\otherwise\\
@@ -170,12 +170,12 @@ We define the constant-depth binary Merkle function as $\merklizecd$. We define 
   }\\
   \label{eq:constantdepthsubtreemerklejust}
   \merklejustsubpath_x&\colon \abracegroup{
-    (\seq{\blob}, \N_{\len{\mathbf{v}}}, \blob \to \hash) &\to \seq{\hash}\\
+    (\seq{\blob}, \Nmax{\len{\mathbf{v}}}, \blob \to \hash) &\to \seq{\hash}\\
     (\mathbf{v}, i, H) &\mapsto T(C(\mathbf{v}, H), 2^xi, H)_{\dots\max(0, \ceil{\log_2(\max(1, \len{\mathbf{v}})) - x})}
   }\\
   \label{eq:constantdepthsubtreemerkleleafpage}
   \merklesubtreepage_x&\colon \abracegroup{
-    (\seq{\blob}, \N_{\len{\mathbf{v}}}, \blob \to \hash) &\to \seq{\hash}\\
+    (\seq{\blob}, \Nmax{\len{\mathbf{v}}}, \blob \to \hash) &\to \seq{\hash}\\
     (\mathbf{v}, i, H) &\mapsto [H(\token{\$leaf} \concat l) \mid l \orderedin \mathbf{v}_{2^xi \dots \min(2^xi+2^x, \len{\mathbf{v}})}]
   }
 \end{align}
