--- a/text/serialization.tex
+++ b/text/serialization.tex
@@ -28,7 +28,7 @@ Passing multiple arguments to the serialization functions is equivalent to passi
 %We also define the variable-size prefix 29-bit natural serialization function $\se_{4*}$:
 %\begin{equation}
 %  \se_{4*}\colon\abracegroup{
-%    \Nbits{29} &\to \blob_{1:4} \\
+%    \Nbits{29} &\to \bloboflen{1:4} \\
 %    x &\mapsto \begin{cases}
 %      [0] &\when x = 0 \\
 %      \left[2^8-2^{8-l} + \ffrac{x}{2^{8l}}\right] \concat \se_l(x \bmod 2^{8l}) &\when \exists l \in \N_3 : 2^{7l} \le x < 2^{7(l+1)} \\
@@ -40,7 +40,7 @@ Passing multiple arguments to the serialization functions is equivalent to passi
 We define general natural number serialization, able to encode naturals of up to $2^{64}$, as:
 \begin{equation}
   \se\colon\abracegroup{
-    \Nbits{64} &\to \blob_{1:9} \\
+    \Nbits{64} &\to \bloboflen{1:9} \\
     x &\mapsto \begin{cases}
       [0] &\when x = 0 \\
       \left[2^8-2^{8-l} + \ffrac{x}{2^{8l}}\right] \concat \se_l(x \bmod 2^{8l}) &\when \exists l \in \N_8 : 2^{7l} \le x < 2^{7(l+1)} \\
@@ -85,14 +85,14 @@ A sequence of bits $b \in \bitstring$ is a special case since encoding each indi
 \subsubsection{Dictionary Encoding}
 In general, dictionaries are placed in the Merkle trie directly (see appendix \ref{sec:merklization} for details). However, small dictionaries may reasonably be encoded as a sequence of pairs ordered by the key. Formally:
 \begin{equation}
-  \forall K, V: \se(d \in \dict{K}{V}) \equiv \se(\var{\orderby{k}{\tup{\se(k), \se(d[k])} \mid k \in \Fkeys{d}}})
+  \forall K, V: \se(d \in \dict{K}{V}) \equiv \se(\var{\sqorderby{k}{\tup{\se(k), \se(d[k])} \mid k \in \Fkeys{d}}})
 \end{equation}
 
 %The second is as a sequence of encoded values only, with each entry having an implicit key according to an enumeration over its domain. This is typically used when the domain is small in magnitude and typically similar in magnitude to the active domain. In order to account for the possibility of a key not existing in the dictionary (\ie the domain and the active domain not being equal) we prefix each value with an octet of one to indicate that the key is indeed present in the dictionary and place an octet of zero if the implied key is not.
 %
 %We provide a function $\signdata$ to deliver this from a regular dictionary:
 %\begin{equation}
-%  \forall K, V: \signdata(d \in \dict{K}{V}) \equiv \var{\orderby{k}{\begin{aligned}
+%  \forall K, V: \signdata(d \in \dict{K}{V}) \equiv \var{\sqorderby{k}{\begin{aligned}
 %    &[1] \concat \se(d[k]) &&\ \when k \in \Fkeys{d} \\
 %    &[0] &&\ \otherwise
 %  \end{aligned}
@@ -114,10 +114,10 @@ For any values which are sets and don't already have a defined encoding above, w
 We first define the trivial natural number serialization functions which are subscripted by the number of octets of the final sequence. Values are encoded in a regular little-endian fashion. This is utilized for almost all integer encoding across the protocol. Formally:
 \begin{equation}
   \se_{l \in \N}\colon\abracegroup{
-    \N_{2^{8l}} &\to \blob_l \\
+    \Nbits{8l} &\to \bloboflen{l} \\
     x &\mapsto \begin{cases}
-      [] &\when l = 0 \\
-      [x \bmod 256] \concat \se_{l - 1}\left(\left\lfloor \frac{x}{256} \right\rfloor\right) &\otherwise
+      sq{} &\when l = 0 \\
+      sq{x \bmod 256} \concat \se_{l - 1}\left(\floor{\frac{x}{256}}\right) &\otherwise
     \end{cases}
   }
 \end{equation}
@@ -126,7 +126,7 @@ For non-natural arguments, $\se_{l \in \N}$ corresponds to the definitions of $\
 \begin{align}
   \se_{l \in \N}(a, b, \dots) &\equiv \se_l(\tup{a, b, \dots})\\
   \se_{l \in \N}(\tup{a, b, \dots}) &\equiv \se_l(a) \concat \se_l(b) \concat \dots\\
-  \se_{l \in \N}([\mathbf{i}_0, \mathbf{i}_1, ...]) &\equiv \se_l(\mathbf{i}_0) \concat \se_l(\mathbf{i}_1) \concat \dots
+  \se_{l \in \N}(\sq{\mathbf{i}_0, \mathbf{i}_1, \dots}) &\equiv \se_l(\mathbf{i}_0) \concat \se_l(\mathbf{i}_1) \concat \dots
 \end{align}
 
 And so on.
@@ -149,7 +149,7 @@ A block $\block$ is serialized as a tuple of its elements in regular order, as i
   \se_U(\mathbf{H}) &= \se(\H_\¬parent,\H_\¬priorstateroot,\H_\¬extrinsichash)\concat\se_4(\H_\¬timeslot)\concat\se(\maybe{\H_\¬epochmark},\maybe{\H_\¬winnersmark},\se_2(\H_\¬authorindex),\H_\¬vrfsig,\var{\H_\¬offendersmark})\\
   \se(x \in \workcontext) &\equiv \se(x_a, x_s, x_b, x_l)\concat\se_4(x_t)\concat\se(\var{x_\mathbf{p}})\\
   \se(x \in \avspec) &\equiv \se(x_h) \concat \se_4(x_l)\concat\se(x_u, x_e) \concat \se_2(x_n) \\
-  \se(x \in \mathbb{L}) &\equiv \se(\se_4(x_s), x_c, x_y, \se_8(x_g), x_u, x_i, x_x, x_z, x_e, \seresult(x_\wl¬result))\\
+  \se(x \in \mathbb{L}) &\equiv \se(\se_4(x_s), x_c, x_y, \se_8(x_g), x_u, x_i, x_x, x_z, x_e, \seresult(x_\wd¬result))\\
   \se(x \in \workreport) &\equiv \se(x_s, x_x, x_c, x_a, x_g, \var{x_\wr¬authtrace}, \var{x_\mathbf{l}}, \var{x_\wr¬digests}) \\
   \se(x \in \workpackage) &\equiv \se(\se_4(x_\wp¬authcodehost), x_\wp¬authcodehash, x_\wp¬context, \var{x_\wp¬authtoken}, \var{x_\wp¬authconfig}, \var{x_\wp¬workitems}) \\
   % TODO: \se_4(i) should be just \se(i), but we should wait for this to be written.
